--- a/amazon.html
+++ b/amazon.html
@@ -54,6 +54,6 @@
     <div class="main">
       <div class="products-grid js-products-grid">
     </div>
-    <script type="module" src="scripts/amazon.js" defer></script>
+    <script type="module" src="scripts/amazon.js"></script>
   </body>
 </html>
